<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:id="@+id/ln_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/iv_close"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/content_description_close"
                android:src="@drawable/ic_close" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/auth_logo_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/auth_logo_margin_top"
                android:contentDescription="@string/content_description_logo"
                android:src="@drawable/ic_app_logo_gray" />

            <TextView
                android:id="@+id/tv_register_title"
                fontPath="fonts/sf_pro_text_semibold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="2dp"
                android:text="@string/auth_register"
                android:textColor="@color/auth_title_text"
                android:textSize="18sp" />


            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/til_last_name"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_last_name"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:hint="@string/auth_input_last_name_hint"
                    android:inputType="textCapSentences" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/til_first_name"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                android:layout_marginBottom="0dp"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_first_name"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:hint="@string/auth_input_first_name_hint"
                    android:inputType="textCapSentences" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/til_middle_name"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_middle_name"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:hint="@string/auth_input_middle_name_hint"
                    android:inputType="textCapWords" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/sc_no_middle_name"
                    style="@style/Profile.Edit.Switch"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/profile_edit_user_no_middle_name" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/til_email"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                android:layout_marginBottom="8dp"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/auth_input_phone_hint"
                    android:inputType="textEmailAddress" />

            </com.example.ui.views.CustomTextInputLayout>


            <com.example.ui.views.passwordView.PasswordFieldsView
                android:id="@+id/password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default" />

            <LinearLayout
                android:id="@+id/llAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbAgree"
                    fontPath="fonts/Roboto-Light.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:theme="@style/CheckBoxNew" />

                <TextView
                    android:id="@+id/tvAgree"
                    fontPath="fonts/sf_pro_display.OTF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/auth_title_text"
                    tools:text="@string/auth_agree_user_agreement" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_agree_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                android:gravity="center"
                android:text="@string/auth_error_agreement"
                android:textColor="@color/attention_action"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.example.ui.views.loading.CustomLoadingButton
                android:id="@+id/ib_register"
                style="@style/BtnLoadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                android:layout_marginVertical="20dp"
                app:buttonMinHeight="@dimen/auth_button_min_height"
                app:buttonText="@string/auth_action_register" />


        </LinearLayout>
    </ScrollView>

</layout>
