<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidUnknownAttribute -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
        <LinearLayout
            android:id="@+id/llInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/ibRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle">

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/tilFirstName"
...
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/auth_input_password_hint"
                    android:inputType="textPassword" />
            </com.example.ui.views.CustomTextInputLayout>
...
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordConfirm"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/auth_input_password_confirm_hint"
                    android:inputType="textPassword" />
            </com.example.ui.views.CustomTextInputLayout>
...
                android:layout_marginStart="8dp"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/flAgree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:minWidth="48dp"
                    android:minHeight="48dp">

...
