...
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="custom"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCode"
            style="@style/Profile.Edit.Input.SingleLine"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:hint="@string/status_profile_status_code_hint"
            android:inputType="number" />
    </com.example.ui.views.CustomTextInputLayout>
...
